[tool.poetry]
name = "midjourney_api_client"
version = "1.0.1"
description = "Midjourney API by useapi.net"
authors = ["Use API <support@useapi.net>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/useapi/midjourney-api-client"
keywords = ["Midjourney", "API"]
include = ["midjourney_api_client/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
urllib3 = ">=1.25.3, <2.1.0"
python-dateutil = ">=2.5.3"
pydantic = ">=1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"